--- a/task sm/assets/style2.css
+++ b/task sm/assets/style2.css
@@ -4,7 +4,8 @@
     box-sizing: 0;
 
 }
-.head{
+
+.head {
     margin-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -13,110 +14,121 @@
     align-items: center;
     justify-content: center;
 }
-.shop{
+
+.shop {
     margin-top: 10px;
 }
-a{
+
+a {
     color: orange;
     text-decoration: none;
 }
-section{
+
+section {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
 
 }
-.lorem1{
+
+.lorem1 {
     font-family: Arial, Helvetica, sans-serif;
     color: orange;
     margin-bottom: 10px;
 }
-.container{
+
+.container {
     margin-top: 50px;
     background-color: whitesmoke;
     width: 800px;
     height: 400px;
     display: flex;
     align-items: center;
+ 
     justify-content: center;
 }
-.shoes{
-   width: 400px;
-   height: 400px;
+
+.shoes {
+    width: 400px;
+    height: 400px;
 
 
 }
-.dol70{
-display: flex;
-flex-direction: column;
+
+.dol70 {
+    display: flex;
+    flex-direction: column;
 }
-input[type=number]{
+
+input[type=number] {
     width: 50px;
     height: 30px;
 }
-input[type=button]{
+
+input[type=button] {
     width: 100px;
     height: 32px;
     background-color: black;
     color: orange;
 }
-h5{
-font-family: Arial, Helvetica, sans-serif;
-font-size: 15px;
-margin-top: 20px;
-margin-bottom: 30px;
+
+h5 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
-.share{
+
+.share {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     border-radius: 2px;
     width: 50px;
     height: 30px;
     background-color: whitesmoke;
-    margin-top:36px ;
+    margin-top: 36px;
 }
-.icons{
+
+.icons {
     display: flex;
     align-items: center;
-    
-    
 
-    
+
+
+
 }
-i{
-   
+
+i {
+    
     margin-top: 36px;
     margin-left: 10px;
     width: 30px;
     height: 30px;
     background-color: whitesmoke;
 }
-.dollar{
+
+.dollar {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 20px;
 }
 .dow{
-    display: flex;
-    
-    align-items: center;
-    justify-content: center;
-}
-.down{
-    background-color: aqua;
-    margin: 30px;
-    width:200px
-    height:300px
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-    
-}
-.img{
-    width: 220px;
-    height: 50px;
+    maqrgin-top: 40px;
+    width: 1000px;
+    height: 200px;
+ 
+
 }
 .foto{
-    /* width: 50px;
-    height: 50px; */
+  
+}
+.down{
 
+    display: flex;
+    align-items: center;
+  
+}
+.a{
+    width: 100px;
+    height: 100px;
+    
 }
